--- a/src/scala/.devcontainer/devcontainer.json
+++ b/src/scala/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
         "vscode": {
             "extensions": [
                 "vscjava.vscode-java-pack",
-		        "scalameta.metals",
+		//"scalameta.metals",
                 "ms-azuretools.vscode-docker",
                 "ms-vscode-remote.remote-containers",
                 "scala-lang.scala",
@@ -19,7 +19,7 @@
             ]
         }
     },
-    "postCreateCommand": "java -version && sbt -version && docker --version && scala -version"
+    "postCreateCommand": "java -version && sbt -version && docker --version && scala -version && sbt new codynolf/scala-starter.g8 --name='${templateOption:projectname}' && echo '${templateOption:projectname}'"
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
