--- a/src/scala/devcontainer-template.json
+++ b/src/scala/devcontainer-template.json
@@ -5,6 +5,13 @@
     "description": "Scala template for local scala development in vscode.",
     "documentationURL": "https://github.com/devcontainers/template-starter/tree/main/src/hello",
     "licenseURL": "https://github.com/devcontainers/template-starter/blob/main/LICENSE",
+     "options": {
+        "projectname": {
+            "type": "string",
+            "description": "Name of the new scala project.",
+            "default": "hello-world"
+        }
+    },
     "platforms": [
         "Any"
     ]
