added install of nordvpn to scala container

--- a/src/scala/.devcontainer/devcontainer.json
+++ b/src/scala/.devcontainer/devcontainer.json
@@ -11,10 +11,12 @@
 		"GIT_EMAIL": "cody.nolf@cryptndev.com",
 		"GIT_USER": "Cody Nolf"
 	},
+	/*
+	 * WSL mounts
 	"mounts": [
 		"type=bind,source=/home/${localEnv:USER}/.ssh,target=/root/.ssh,readonly",
 		"type=bind,source=/home/${localEnv:USER}/share,target=/home/${localEnv:USER}/share"
-	  ],
+	  ],*/
 	"customizations":
     {
         "vscode": {
@@ -28,5 +30,5 @@
         }
     },
 	"privileged": true,
-    //"postCreateCommand": "java -version && sbt -version && scala -version && git config --global user.email \"$GIT_EMAIL\" && git config --global user.name \"$GIT_USER\""
+    "postCreateCommand": "java -version && sbt -version && scala -version && git config --global user.email \"$GIT_EMAIL\" && git config --global user.name \"$GIT_USER\""
 }
