--- a/src/tezos-archetype/.devcontainer/devcontainer.json
+++ b/src/tezos-archetype/.devcontainer/devcontainer.json
@@ -34,5 +34,5 @@
 		}
 	},
 	"remoteUser": "root",
-	"postAttachCommand": "cp arl.svg /root/.vscode-server/extensions"
+	"postAttachCommand": "cp arl.svg /root/.vscode-server/extensions && git config --global user.email \"$GIT_EMAIL\" && git config --global user.name \"$GIT_USER\""
 }
