--- a/src/nordvpn/.devcontainer/devcontainer.json
+++ b/src/nordvpn/.devcontainer/devcontainer.json
@@ -7,12 +7,11 @@
 		"GIT_EMAIL": "",
 		"GIT_USER": ""
 	},
-	/*
-	 * WSL mounts
+	// WSL mounts
 	"mounts": [
 		"type=bind,source=/home/${localEnv:USER}/.ssh,target=/root/.ssh,readonly",
 		"type=bind,source=/home/${localEnv:USER}/share,target=/home/${localEnv:USER}/share"
-	],*/
+	],
 	"customizations":
 	{
 		"vscode": {
