--- a/src/hbase/.devcontainer/devcontainer.json
+++ b/src/hbase/.devcontainer/devcontainer.json
@@ -10,11 +10,10 @@
 		"GIT_EMAIL": "",
 		"GIT_USER": ""
 	},
-	/*
-	 * WSL mounts
+	//WSL mounts
 	"mounts": [
 		"type=bind,source=/home/${localEnv:USER}/.ssh,target=/root/.ssh,readonly",
 		"type=bind,source=/home/${localEnv:USER}/share,target=/home/${localEnv:USER}/share"
-	],*/
+	],
 	"postCreateCommand": "git config --global user.email \"$GIT_EMAIL\" && git config --global user.name \"$GIT_USER\" && echo \"run /hbase/hbase-2.5.5/bin/start-hbase.sh to start hbase server.\""
 }
