updated hbase devcontainer

--- a/src/hbase/.devcontainer/Dockerfile
+++ b/src/hbase/.devcontainer/Dockerfile
@@ -1,6 +1,8 @@
 ARG BASE_IMAGE_TAG
 FROM eclipse-temurin:${BASE_IMAGE_TAG:-11.0.16.1_1-jdk}
 
+ARG HBASE_VERSION
+
 RUN \
   apt-get update && \
   apt-get install git nano -y
@@ -8,6 +10,8 @@ RUN \
 #ARG HBASE_VERSION
 RUN \
     mkdir /hbase && \
-    curl -fsL "https://dlcdn.apache.org/hbase/2.5.5/hbase-2.5.5-bin.tar.gz" | tar xzvf - -C /hbase
+    curl -fsL "https://dlcdn.apache.org/hbase/$HBASE_VERSION/hbase-$HBASE_VERSION-bin.tar.gz" | tar xzvf - -C /hbase
 
-#ENTRYPOINT ["/bin/bash", "/hbase/hbase-2.5.5/bin/start-hbase.sh"]
+ENV HBASE_HOME /hbase/hbase-$HBASE_VERSION
+
+#CMD ["$HBASE_HOME/start-hbase.sh"]
