--- a/src/hbase/.devcontainer/devcontainer.json
+++ b/src/hbase/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 	"build": {
 		"dockerfile": "Dockerfile",
 		"args": {
-			"HBASE_VERSION":"2.5.5"
+			"HBASE_VERSION":"2.5.10"
 		}
 	},
 	"containerEnv": { 
@@ -15,5 +15,5 @@
 		"type=bind,source=/home/${localEnv:USER}/.ssh,target=/root/.ssh,readonly",
 		"type=bind,source=/home/${localEnv:USER}/share,target=/home/${localEnv:USER}/share"
 	],
-	"postCreateCommand": "git config --global user.email \"$GIT_EMAIL\" && git config --global user.name \"$GIT_USER\" && echo \"run /hbase/hbase-2.5.5/bin/start-hbase.sh to start hbase server.\""
+	"postAttachCommand": "git config --global user.email \"$GIT_EMAIL\" && git config --global user.name \"$GIT_USER\""
 }
