updates to scala 3 devcontainer

--- a/src/scala3/.devcontainer/Dockerfile
+++ b/src/scala3/.devcontainer/Dockerfile
@@ -1,6 +1,6 @@
 # Pull base image
 ARG BASE_IMAGE_TAG
-FROM eclipse-temurin:${BASE_IMAGE_TAG:-11.0.16.1_1-jdk}
+FROM mcr.microsoft.com/openjdk/jdk:21-ubuntu
 
 # Env variables
 ARG SCALA_VERSION
