--- a/src/scala3/.devcontainer/devcontainer.json
+++ b/src/scala3/.devcontainer/devcontainer.json
@@ -6,14 +6,10 @@
 			"FLINK_INSTALL": "false"
 		}
 	},
-	"containerEnv": { 
-		"GIT_EMAIL": "",
-		"GIT_USER": ""
-	},
-	// Host mounts
 	"mounts": [
 		"type=bind,source=/home/${localEnv:USER}/.ssh,target=/root/.ssh,readonly",
-		"type=bind,source=/home/${localEnv:USER}/share,target=/home/${localEnv:USER}/share"
+		"type=bind,source=/home/${localEnv:USER}/.gitconfig,target=/root/.gitconfig,readonly",
+		"type=bind,source=/home/${localEnv:USER}/.ssh,target=/home/coder/.ssh,readonly"
 	],
 	"customizations":
 	{
@@ -34,5 +30,5 @@
 			}
 		}
 	},
-	"postCreateCommand": "java -version && sbt -version && scala -version && git config --global user.email \"$GIT_EMAIL\" && git config --global user.name \"$GIT_USER\""
+	"postCreateCommand": "java -version && sbt -version && scala -version"
 }
