--- a/src/dotnet/.devcontainer/devcontainer.json
+++ b/src/dotnet/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
 				"patcx.vscode-nuget-gallery"
 			],
 			"settings": {
-				"workbench.colorTheme": "Visual Studio Dark",
+				"workbench.colorTheme": "Visual Studio 2019 Dark",
 				"workbench.iconTheme": "vscode-icons"
 			}
 		}
